--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Xenith 2022</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -12,38 +12,72 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 
 <body>
 
-    <div class="uk-section uk-section-primary">
-        <div class="uk-container">
-            <ul uk-accordion>
-                <li class="uk-open">
-                    <a class="uk-accordion-title" href="#">Item 1</a>
-                    <div class="uk-accordion-content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                </li>
-                <li>
-                    <a class="uk-accordion-title" href="#">Item 2</a>
-                    <div class="uk-accordion-content">
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat. Duis aute irure dolor reprehenderit.</p>
-                    </div>
-                </li>
-                <li>
-                    <a class="uk-accordion-title" href="#">Item 3</a>
-                    <div class="uk-accordion-content">
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat proident.</p>
-                    </div>
-                </li>
-            </ul>
+    <div id="preLoader">
+        <div class="uk-position-center">
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="src/lf20_bskj2npr.json" background="transparent" speed="1"
+                style="width: 300px; height: 300px;" loop autoplay></lottie-player>
         </div>
     </div>
+
+    <div id="postLoader" class="uk-hidden">
+        <div class="uk-position-relative">
+
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_zprb9vzj.json" background="transparent"
+                speed="1" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
+
+            <div class="uk-position-top" uk-scrollspy="cls:uk-animation-fade">
+
+
+                <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+                    <nav class="uk-navbar-container uk-margin uk-navbar-transparent uk-light"
+                        uk-navbar="dropbar: true;">
+                        <div class="uk-navbar-center">
+
+                            <a href="index.html" class="uk-navbar-item uk-logo"><img src="" alt=""></a>
+                            <ul class="uk-navbar-nav">
+                                <li class="uk-active"><a href="index.html">Home</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li><a href="#event">Events</a></li>
+                                <li><a href="#timeline">Timeline</a></li>
+                                <li><a href="#team">Team</a></li>
+                                <li><a href="#sponsors">Sponsors</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                            </ul>
+
+                        </div>
+                    </nav>
+                </div>
+
+            </div>
+
+            <div class="uk-position-center" uk-scrollspy="cls:uk-animation-fade">
+                <h4 class="uk-heading-line uk-text-center hero-heading">
+                    <span>Jaypee Institute of Information Technolory in association with IEEE presents</span>
+                </h4>
+                <h1 class="uk-heading-large uk-text-center hero-heading">
+                    <span>Xenith'22</span>
+                </h1>
+            </div>
+
+        </div>
+
+        <div class="uk-section" id="about">
+            <div class="uk-container">
+
+            </div>
+        </div>
+
+
+    </div>
+
 
 
 </body>
