Run loader on live server

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="preLoader">
     <div class="uk-position-center">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="https://assets9.lottiefiles.com/private_files/lf30_o7ztpqwd.json" background="transparent"
+      <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent"
         speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </div>
   </div>
