--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         speed="1" style="width: 100%; height: 100%" loop autoplay></lottie-player>
 
       <div class="uk-position-top" uk-scrollspy="cls:uk-animation-fade">
-        <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+        <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" id="navbarMain">
           <nav class="
-                uk-navbar-container uk-margin uk-navbar-transparent uk-light
-              " uk-navbar="dropbar: true;">
+                uk-navbar-container uk-navbar-transparent uk-light
+              " uk-navbar="dropbar: true;" >
             <div class="uk-navbar-center">
               <a href="index.html" class="uk-navbar-item uk-logo"><img src="" alt="" /></a>
               <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="index.html">Home</a></li>
+                <li class="uk-active"><a href="#postLoader">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#event">Events</a></li>
                 <li><a href="#timeline">Timeline</a></li>
@@ -62,8 +62,15 @@
         </h1>
       </div>
     </div>
-    <div class="uk-section" id="about">
-      <div class="uk-container"></div>
+    <div class="uk-section">
+      <div class="uk-container">
+        <div class="uk-position-relative">
+          <div class="uk-position-top-center">
+            <div class="uk-tile uk-tile-default"><span id="about">About</span></div>
+          </div>
+        </div>
+        
+      </div>
     </div>
   </div>
 </body>
