--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
   <div id="preLoader">
     <div class="uk-position-center">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent"
-        speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+      <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent" speed="1"
+        style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </div>
   </div>
 
   <div id="postLoader" class="uk-hidden">
     <div class="uk-position-relative">
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_zprb9vzj.json" background="transparent"
-        speed="1" style="width: 100%; height: 100%" loop autoplay></lottie-player>
+
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_zprb9vzj.json" background="transparent"
+          speed="1" loop autoplay></lottie-player>
+
+      
 
       <div class="uk-position-top" uk-scrollspy="cls:uk-animation-fade">
         <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" id="navbarMain">
           <nav class="
                 uk-navbar-container uk-navbar-transparent uk-light
-              " uk-navbar="dropbar: true;" >
+              " uk-navbar="dropbar: true;">
             <div class="uk-navbar-center">
               <a href="index.html" class="uk-navbar-item uk-logo"><img src="" alt="" /></a>
               <ul class="uk-navbar-nav">
@@ -69,7 +72,7 @@
             <div class="uk-tile uk-tile-default"><span id="about">About</span></div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
