--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 /></a>
                 <ul class="uk-navbar-nav">
                   <li class="uk-active cp-tag">
-                    <a href="index.html">Home</a>
+                    <a href="#postLoader">Home</a>
                   </li>
                   <li><a class="cp-tag" href="#about">About</a></li>
                   <li><a class="cp-tag" href="#event">Events</a></li>
