--- a/index.html
+++ b/index.html
@@ -63,15 +63,14 @@
                 uk-navbar-container uk-margin uk-navbar-transparent uk-light
               "
               uk-navbar="dropbar: true;"
+              id="navbarMain"
             >
               <div class="uk-navbar-center">
                 <a href="index.html" class="uk-navbar-item uk-logo"
                   ><img src="" alt=""
                 /></a>
                 <ul class="uk-navbar-nav">
-                  <li class="uk-active cp-tag">
-                    <a href="#postLoader">Home</a>
-                  </li>
+                  <li><a class="cp-tag" href="#home">Home</a></li>
                   <li><a class="cp-tag" href="#about">About</a></li>
                   <li><a class="cp-tag" href="#event">Events</a></li>
                   <li><a class="cp-tag" href="#timeline">Timeline</a></li>
