--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-default"><span id="about">About</span></div>
           </div>
+          <div class="uk-position-center">
+            
+          </div>
         </div>
-
       </div>
     </div>
   </div>
