--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <span>Beyond The Apex With</span>
           </h4>
           <h1 class="uk-heading-large uk-text-center hero-heading">
-            <span>Xenith'22</span>
+            <span class="heading-title">Xenith'22</span>
           </h1>
         </div>
         <!--Hidden for Pc-->
