Event section layout added

--- a/index.html
+++ b/index.html
@@ -124,7 +124,66 @@
             <div class="uk-tile uk-tile-default"><span class="sectionHead">Events</span></div>
           </div>
           <div class="uk-position-center">
-            
+            <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+              <div>
+                  <div class="uk-card uk-card-default uk-card-body">
+                      <h3 class="uk-card-title">Default</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  </div>
+              </div>
+              <div>
+                  <div class="uk-card uk-card-primary uk-card-body">
+                      <h3 class="uk-card-title">Primary</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  </div>
+              </div>
+              <div>
+                  <div class="uk-card uk-card-secondary uk-card-body">
+                      <h3 class="uk-card-title">Secondary</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+            <div>
+                <div class="uk-card uk-card-default uk-card-body">
+                    <h3 class="uk-card-title">Default</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title">Primary</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-secondary uk-card-body">
+                    <h3 class="uk-card-title">Secondary</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+        <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+          <div>
+              <div class="uk-card uk-card-default uk-card-body">
+                  <h3 class="uk-card-title">Default</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              </div>
+          </div>
+          <div>
+              <div class="uk-card uk-card-primary uk-card-body">
+                  <h3 class="uk-card-title">Primary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              </div>
+          </div>
+          <div>
+              <div class="uk-card uk-card-secondary uk-card-body">
+                  <h3 class="uk-card-title">Secondary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              </div>
+          </div>
+      </div>
           </div>
         </div>
       </div>
