--- a/index.html
+++ b/index.html
@@ -124,66 +124,66 @@
             <div class="uk-tile uk-tile-default"><span class="sectionHead">Events</span></div>
           </div>
           <div class="uk-position-center">
-            <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+            <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match event-card" uk-grid>
               <div>
-                  <div class="uk-card uk-card-default uk-card-body">
-                      <h3 class="uk-card-title">Default</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  </div>
-              </div>
-              <div>
-                  <div class="uk-card uk-card-primary uk-card-body">
-                      <h3 class="uk-card-title">Primary</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  </div>
-              </div>
-              <div>
-                  <div class="uk-card uk-card-secondary uk-card-body">
-                      <h3 class="uk-card-title">Secondary</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  </div>
-              </div>
-          </div>
-          <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
-            <div>
-                <div class="uk-card uk-card-default uk-card-body">
-                    <h3 class="uk-card-title">Default</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-primary uk-card-body">
-                    <h3 class="uk-card-title">Primary</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-secondary uk-card-body">
-                    <h3 class="uk-card-title">Secondary</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
-          <div>
-              <div class="uk-card uk-card-default uk-card-body">
+                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
                   <h3 class="uk-card-title">Default</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
               </div>
-          </div>
-          <div>
-              <div class="uk-card uk-card-primary uk-card-body">
+              <div>
+                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
                   <h3 class="uk-card-title">Primary</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
               </div>
-          </div>
-          <div>
-              <div class="uk-card uk-card-secondary uk-card-body">
+              <div>
+                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
                   <h3 class="uk-card-title">Secondary</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
               </div>
-          </div>
-      </div>
+            </div>
+            <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match event-card" uk-grid>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
+                  <h3 class="uk-card-title">Default</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
+                  <h3 class="uk-card-title">Primary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
+                  <h3 class="uk-card-title">Secondary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+            </div>
+            <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match event-card" uk-grid>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
+                  <h3 class="uk-card-title">Default</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
+                  <h3 class="uk-card-title">Primary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+              <div>
+                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
+                  <h3 class="uk-card-title">Secondary</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -193,7 +193,87 @@
 
     <!--Timeline section begins-->
 
+    <div class="uk-position-relative" id="timeline" uk-scrollspy="cls:uk-animation-fade">
+      <div class="uk-section">
+        <div class="uk-container">
+          <div class="uk-position-top-center">
+            <div class="uk-tile uk-tile-transparent"><span class="sectionHeadLight">Timeline</span></div>
+          </div>
+          <div class="uk-position-center">
+              <!-- The Timeline -->
 
+              <ul class="timeline">
+
+                <!-- Item 1 -->
+                <li>
+                  <div class="direction-l">
+                    <div class="flag-wrapper">
+                      <span class="flag">13 Errors Why</span>
+                      <span class="time-wrapper"><span class="time">January 12, 2022</span></span>
+                    </div>
+                    <div class="desc">10PM - Qualifiers</div>
+                  </div>
+                </li>
+
+                <!-- Item 2 -->
+                <li>
+                  <div class="direction-r">
+                    <div class="flag-wrapper">
+                      <span class="flag">Opening ceramony</span>
+                      <span class="time-wrapper"><span class="time">January 13, 2022</span></span>
+                    </div>
+                    <div class="desc">6:30 PM</div>
+                  </div>
+                </li>
+
+                <!-- Item 3 -->
+                <li>
+                  <div class="direction-l">
+                    <div class="flag-wrapper">
+                      <span class="flag">Tech Talk - Striver</span>
+                      <span class="time-wrapper"><span class="time">January 14, 2022</span></span>
+                    </div>
+                    <div class="desc">7 - 8 PM</div>
+                  </div>
+                </li>
+                <!--  Item 4 -->
+                <li>
+                  <div class="direction-r">
+                    <div class="flag-wrapper">
+                      <span
+                        class="flag">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trinity&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                      <span class="time-wrapper"><span class="time">January 15, 2022</span></span>
+                    </div>
+                    <div class="desc">8 - 9 PM -> Round 1</div>
+                  </div>
+                </li>
+                <!-- Item 5 -->
+                <li>
+                  <div class="direction-l">
+                    <div class="flag-wrapper">
+                      <span class="flag">Quantum Arc</span>
+                      <span class="time-wrapper"><span class="time">January 16, 2022</span></span>
+                    </div>
+                    <div class="desc">8 - 9 PM -> Round 2</div>
+                  </div>
+                </li>
+                <!--  Item 6 -->
+                <li>
+                  <div class="direction-r">
+                    <div class="flag-wrapper">
+                      <span class="flag">&nbsp;&nbsp;&nbsp;The Cromulons&nbsp;&nbsp;&nbsp;</span>
+                      <span class="time-wrapper"><span class="time">January 17, 2022</span></span>
+                    </div>
+                    <div class="desc">9 - 11 AM</div>
+                  </div>
+                </li>
+
+              </ul>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--Timeline section ends -->
 
@@ -215,7 +295,7 @@
 
 
     <!--Contact section ends-->
-    
+
   </div>
 
   </div>
