--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.scss" />
+
   <!-- UIkit JS -->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </head>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <body>
   <div id="preLoader">
     <div class="uk-position-center">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent"
-        speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+      <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent" speed="1"
+        style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </div>
   </div>
 
@@ -35,7 +39,7 @@
         <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" id="navbarMain">
           <nav class="
                 uk-navbar-container uk-navbar-transparent uk-light
-              " uk-navbar="dropbar: true;" >
+              " uk-navbar="dropbar: true;">
             <div class="uk-navbar-center">
               <a href="index.html" class="uk-navbar-item uk-logo"><img src="" alt="" /></a>
               <ul class="uk-navbar-nav">
@@ -69,10 +73,87 @@
             <div class="uk-tile uk-tile-default"><span id="about">About</span></div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
+
+  <!--footer-->
+
+  <div class="footer">
+    <div class="footer-content">
+
+      <div class="footer-section about">
+        <h1 class="logo-text">REACH US AT</h1>
+        <p class="contentfooter">
+          Xenith 2021<br>
+          Jaypee Institute Of Information<br>
+          Technology<br> Sector-62, Noida,<br>India
+        </p>
+
+
+      </div>
+
+      <div class="footer-section links">
+        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
+
+        <ul>
+          <a href="#" class="contentfooter">
+            <li>Events</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Team</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Mentores</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Gallery</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Terms and Conditions</li>
+          </a>
+        </ul>
+      </div>
+
+      <div class="footer-section contact-form">
+        <h1>CONTACT US</h1>
+        <br>
+
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      <div class="socials">
+        <h1>FOLLOW US ON</h1>
+
+        <div class="container">
+          <div class="btn fb-btn">
+            <i class="fa fa-facebook" aria-hidden="true" id="fb"></i>
+          </div>
+          <div class="btn ig-btn">
+            <i class="fa fa-instagram" aria-hidden="true" id="ig"></i>
+          </div>
+          <div class="btn ln-btn">
+            <i class="fa fa-linkedin" aria-hidden="true" id="ln"></i>
+          </div>
+          <div class="btn gt-btn">
+            <i class="fa fa-github" aria-hidden="true" id="gt"></i>
+          </div>
+          <div class="btn yt-btn">
+            <i class="fa fa-youtube-play" aria-hidden="true" id="yt"></i>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+    <br><br>
+  </div>
+
+
+  <!--/footer-->
 </body>
 
 </html>
