--- a/index.html
+++ b/index.html
@@ -79,49 +79,12 @@
   </div>
 
   <!--footer-->
-
-  <div class="footer">
-    <div class="footer-content">
-
-      <div class="footer-section about">
-        <h1 class="logo-text">REACH US AT</h1>
-        <p class="contentfooter">
-          Xenith 2021<br>
-          Jaypee Institute Of Information<br>
-          Technology<br> Sector-62, Noida,<br>India
-        </p>
-
-
-      </div>
-
-      <div class="footer-section links">
-        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
-
-        <ul>
-          <a href="#" class="contentfooter">
-            <li>Events</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Team</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Mentores</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Gallery</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Terms and Conditions</li>
-          </a>
-        </ul>
-      </div>
-
-      <div class="footer-section contact-form">
-        <h1>CONTACT US</h1>
-        <br>
-
-      </div>
-
+  <footer class="footer">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
     </div>
 
     <div class="footer-bottom">
@@ -148,10 +111,9 @@
         </div>
 
       </div>
-    </div>
-    <br><br>
-  </div>
-
+  </footer>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <!--/footer-->
 </body>
