--- a/index.html
+++ b/index.html
@@ -86,7 +86,47 @@
       <div class="wave" id="wave3"></div>
       <div class="wave" id="wave4"></div>
     </div>
+    <div class="footer-content">
+      <div class="footer-section about">
+        <h1 class="logo-text">REACH US AT</h1>
+        <h3 class="contentfooter">
+          Xenith 2021<br>
+          Jaypee Institute Of Information<br>
+          Technology<br> Sector-62, Noida,<br>India
+        </h3>
 
+
+      </div>
+
+      <div class="footer-section links">
+        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
+
+        <ul>
+          <a href="#" class="contentfooter">
+            <li>About</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Events</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Timeliene</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Team</li>
+          </a>
+          <a href="#" class="contentfooter">
+            <li>Sponsers</li>
+          </a>
+        </ul>
+      </div>
+
+      <div class="footer-section contact-form">
+        <h1>CONTACT US</h1>
+        <br>
+
+      </div>
+
+    </div>
     <div class="footer-bottom">
       <div class="socials">
         <h1>FOLLOW US ON</h1>
