--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/style.scss" />
-
+  <link href='https://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
   <!-- UIkit JS -->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
@@ -99,7 +99,7 @@
       </div>
 
       <div class="footer-section links">
-        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
+        <P class="glitch" data-text="QUICK LINKS">QUICK LINKS</P>
 
         <ul>
           <a href="#" class="contentfooter">
