--- a/index.html
+++ b/index.html
@@ -77,7 +77,32 @@
       </div>
     </div>
   </div>
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <!--footer-->
   <footer class="footer">
     <div class="waves">
@@ -88,9 +113,8 @@
     </div>
     <div class="footer-content">
       <div class="footer-section about">
-        <h1 class="logo-text">REACH US AT</h1>
-        <h3 class="contentfooter">
-          Xenith 2021<br>
+        <h1 class="glitch" data-text="REACH US AT">REACH US AT</h1>
+        <h3>Xenith 2021<br>
           Jaypee Institute Of Information<br>
           Technology<br> Sector-62, Noida,<br>India
         </h3>
@@ -99,7 +123,7 @@
       </div>
 
       <div class="footer-section links">
-        <P class="glitch" data-text="QUICK LINKS">QUICK LINKS</P>
+        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
 
         <ul>
           <a href="#" class="contentfooter">
@@ -109,7 +133,7 @@
             <li>Events</li>
           </a>
           <a href="#" class="contentfooter">
-            <li>Timeliene</li>
+            <li>Timeline</li>
           </a>
           <a href="#" class="contentfooter">
             <li>Team</li>
@@ -121,7 +145,7 @@
       </div>
 
       <div class="footer-section contact-form">
-        <h1>CONTACT US</h1>
+        <h1 class="glitch" data-text="CONTACT US">CONTACT US</h1>
         <br>
 
       </div>
@@ -129,7 +153,7 @@
     </div>
     <div class="footer-bottom">
       <div class="socials">
-        <h1>FOLLOW US ON</h1>
+        <div class="glitch" data-text="FOLLOW US ON" style="padding: 5px; text-align: center;">FOLLOW US ON</div>
 
         <div class="container">
           <div class="btn fb-btn">
@@ -149,8 +173,8 @@
           </div>
 
         </div>
-
       </div>
+    </div>
   </footer>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
