--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <div class="footer-bottom">
       <div class="socials">
-        <div class="glitch" data-text="FOLLOW US ON" style="padding: 5px; text-align: center;">FOLLOW US ON</div>
+       <div class="foot-follow"><div class="glitch" data-text="FOLLOW US ON">FOLLOW US ON</div></div> 
 
         <div class="container">
           <div class="btn fb-btn">
