--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
 
       <div class="footer-section contact-form">
         <h1 class="glitch" data-text="CONTACT US">CONTACT US</h1>
+        <div class="btn ph-btn" style="float: left;;">
+          <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+        </div>
+        <h3>Shwetank : +919852244157<br><br>
+          <div class="btn ph-btn" style="float: left;;">
+            <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+          </div>Priyanjali : +91 7983760053
+        </h3>
         <br>
 
       </div>
@@ -153,7 +161,9 @@
     </div>
     <div class="footer-bottom">
       <div class="socials">
-       <div class="foot-follow"><div class="glitch" data-text="FOLLOW US ON">FOLLOW US ON</div></div> 
+        <div class="foot-follow">
+          <div class="glitch" data-text="FOLLOW US ON">FOLLOW US ON</div>
+        </div>
 
         <div class="container">
           <div class="btn fb-btn">
