--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       <div class="footer-section links">
         <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
 
-        <ul>
+        <ul class="footer-list">
           <a href="#" class="contentfooter">
             <li>About</li>
           </a>
